# Changelog
All notable changes to this project will be documented in this file.

## [1.0.0] - 2020-08-05
### Added
- Created Private Git Repo
- Created structure for plugin
- Include composer - autoload
- Create activation and deactivation hook
- Created uninstall file
- Drop database on plugin uninstall
- Enqueue class
- Enqueue admin scripts and styles
- Enqueue public scripts and styles 

### Changed
- 

### Removed
- 

### Fixed
- All script and style are tested and work

### Bugs
-

### To proceed
-

#####################################################################

## [1.0.0] - 2020-08-06
### Added
- Shortcode Form admin menu page
- Users list admin page
- Shortcode Example admin page
- [form_inquiry] Shortcode for the frontend form
- Created method loggedInUser() for checking and pulling automaticly user information

### Changed
- Prefix from Sf to Scf
- Changed structure. Moved Admin and Public into includes
- ScfFunctions class
- sendToDatabase() method
- Prefix from Scf to Scf_

### Removed
-

### Fixed
-

### Bugs
-

### To proceed
- Proceed with sendToDatabase() method for sending value to the database with AJAX

#####################################################################

## [1.0.0] - 2020-08-07
### Added
- Send the data to database
- Created method sendToDatabase()

### Changed
-

### Removed
-

### Fixed
-

### Bugs
-

### To proceed
-

#####################################################################