@@ -1,0 +1,18 @@
+.widefat tfoot tr td, .widefat tfoot tr th, .widefat thead tr td, .widefat thead tr th {
+    font-weight: 600;
+}
+
+input.shortcodeExplain {
+    width: 60%;
+    border: none;
+}
+
+input.shortcodeExplain:focus {
+    border-color: #007cba;
+    box-shadow: 0 0 0 1px #007cba;
+    outline: 2px solid transparent;
+}
+
+h1.scf-wp-heading-inline {
+    margin-bottom: 20px;
+}
